...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mv_layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.MvFragment"
        android:orientation="vertical">
        <LinearLayout
...
                android:layout_marginStart="12dp"
                android:text="@string/this_week_s_top_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/mv_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
