...
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.detail.MvDetailFragment"
        android:id="@+id/movie_detail_layout">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/colorPrimaryDark">

...
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:elevation="2dp"
                    android:orientation="vertical">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/pager_detail_mv"
                        android:layout_width="match_parent"
                        android:layout_height="250dp" />

                    <TextView
                        android:id="@+id/item_title_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        tools:text="Godzilla vs Kong" />

                    <TextView
                        android:id="@+id/item_release_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorPrimaryDark"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp">

                        <ImageView
                            android:id="@+id/item_poster_detail"
                            android:layout_width="120dp"
                            android:layout_height="180dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="@string/image_backdrop"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@tools:sample/avatars" />

                        <HorizontalScrollView
                            android:id="@+id/horizontal_genre_sv"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:scrollbars="none"
                            app:layout_constraintEnd_toEndOf="parent"
...
                                android:layout_height="wrap_content"
                                app:chipSpacingHorizontal="8dp"
                                app:singleLine="true" />
                        </HorizontalScrollView>

                        <TextView
                            android:id="@+id/item_desc_detail"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:ellipsize="end"
                            android:maxLines="3"
                            app:layout_constraintBottom_toTopOf="@+id/item_vote_average"
                            app:layout_constraintEnd_toEndOf="@+id/horizontal_genre_sv"
...
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/plot_summary"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/item_desc_full_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="12dp"
                        tools:text="This is dummy content" />
...
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/images_detail_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp" />
                </LinearLayout>
...
                    android:layout_height="15dp"
                    android:background="@color/divider" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <ToggleButton
        android:id="@+id/fav_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/favourite_button"
        android:elevation="2dp"
...
